--- a/resources/views/guest/trading.edge
+++ b/resources/views/guest/trading.edge
@@ -22,7 +22,7 @@
 					<div class="about-entry">
 						<h3>How we trade</h3>
 					</div>
-					<p><img src="/assets/images/trading.jpg"></p>
+					<!-- <p><img src="/assets/images/trading.jpg"></p> -->
 					<!-- About Information end -->
 				</div>
 				
