--- a/resources/views/includes/admin_navigation.edge
+++ b/resources/views/includes/admin_navigation.edge
@@ -8,6 +8,7 @@
     <!-- <li><a href="{{ route('admin.dashboard') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Messages</span></a></li> -->
     <li><a href="{{ route('admin.transactions.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Transactions</span></a></li>
     <li><a href="{{ route('admin.faqs.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> FAQs</span></a></li>
+    <li><a href="{{ route('admin.testimonials.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Testimonials</span></a></li>
     <li><a href="{{ route('admin.users.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Users</span></a></li>
     <li><a href="{{ route('admin.withdrawals.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Withdrawals</span></a></li>
     <li><a href="{{ route('admin.references.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> References</span></a></li>
