--- a/resources/views/app/dashboard.edge
+++ b/resources/views/app/dashboard.edge
@@ -31,7 +31,7 @@
             <div class="mini-stat-icon"><i class="mdi mdi-cash float-right"></i></div>
             <div class="text-white">
               <h6 class="text-uppercase mb-3">Total Invested</h6>
-              <h4 class="mb-4">{{{ moneyFormat(auth.user.wallet) }}}</h4>
+              <h4 class="mb-4">{{{ moneyFormat(totalInvested) }}}</h4>
             </div>
           </div>
         </div>
