Transations email and admin dashbaord

--- a/resources/views/admin/dashboard.edge
+++ b/resources/views/admin/dashboard.edge
@@ -14,11 +14,10 @@
     <div class="col-xl-3 col-md-6">
       <div class="card mini-stat bg-primary">
         <div class="card-body mini-stat-img">
-          <div class="mini-stat-icon"><i class="mdi mdi-cube-outline float-right"></i></div>
+          <div class="mini-stat-icon"><i class="mdi mdi-face-profile float-right"></i></div>
           <div class="text-white">
-            <h6 class="text-uppercase mb-3">Orders</h6>
-            <h4 class="mb-4">1,587</h4><span class="badge badge-info">+11% </span><span class="ml-2">From
-              previous period</span>
+            <h6 class="text-uppercase mb-3">Users</h6>
+            <h4 class="mb-4">{{ numberFormat(userCount) }}</h4>
           </div>
         </div>
       </div>
@@ -26,11 +25,10 @@
     <div class="col-xl-3 col-md-6">
       <div class="card mini-stat bg-primary">
         <div class="card-body mini-stat-img">
-          <div class="mini-stat-icon"><i class="mdi mdi-buffer float-right"></i></div>
+          <div class="mini-stat-icon"><i class="mdi mdi-cash float-right"></i></div>
           <div class="text-white">
-            <h6 class="text-uppercase mb-3">Revenue</h6>
-            <h4 class="mb-4">$46,782</h4><span class="badge badge-danger">-29% </span><span class="ml-2">From
-              previous period</span>
+            <h6 class="text-uppercase mb-3">Total Invested</h6>
+            <h4 class="mb-4">{{{ moneyFormat(totalInvested) }}}</h4> 
           </div>
         </div>
       </div>
@@ -38,11 +36,10 @@
     <div class="col-xl-3 col-md-6">
       <div class="card mini-stat bg-primary">
         <div class="card-body mini-stat-img">
-          <div class="mini-stat-icon"><i class="mdi mdi-tag-text-outline float-right"></i></div>
+          <div class="mini-stat-icon"><i class="mdi mdi-bank float-right"></i></div>
           <div class="text-white">
-            <h6 class="text-uppercase mb-3">Average Price</h6>
-            <h4 class="mb-4">$15.9</h4><span class="badge badge-warning">0% </span><span class="ml-2">From
-              previous period</span>
+            <h6 class="text-uppercase mb-3">Withdrawals</h6>
+            <h4 class="mb-4">{{{ moneyFormat(totalWithdrawals) }}}</h4> 
           </div>
         </div>
       </div>
@@ -52,9 +49,19 @@
         <div class="card-body mini-stat-img">
           <div class="mini-stat-icon"><i class="mdi mdi-briefcase-check float-right"></i></div>
           <div class="text-white">
-            <h6 class="text-uppercase mb-3">Product Sold</h6>
-            <h4 class="mb-4">1890</h4><span class="badge badge-info">+89% </span><span class="ml-2">From
-              previous period</span>
+            <h6 class="text-uppercase mb-3">Packages</h6>
+            <h4 class="mb-4">{{runningPackages}}/{{allPackages}}</h4> 
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-3 col-md-6">
+      <div class="card mini-stat bg-primary">
+        <div class="card-body mini-stat-img">
+          <div class="mini-stat-icon"><i class="mdi mdi-briefcase-check float-right"></i></div>
+          <div class="text-white">
+            <h6 class="text-uppercase mb-3">Wallet Total</h6>
+            <h4 class="mb-4">{{{ moneyFormat(walletBalance) }}}</h4> 
           </div>
         </div>
       </div>
