--- a/resources/views/includes/app_navigation.edge
+++ b/resources/views/includes/app_navigation.edge
@@ -11,5 +11,6 @@
   <li><a href="{{ route('app.withdrawals.index') }}" class="waves-effect"><i class="mdi mdi-cash"></i><span> Withdrawals</span></a></li>
   <!-- <li><a href="{{ route('app.dashboard') }}" class="waves-effect"><i class="mdi mdi-cadmialendar-check"></i><span> Referral</span></a></li> -->
   <li><a href="{{ route('app.supports.index') }}" class="waves-effect"><i class="mdi mdi-help"></i><span> Support</span></a></li>
+  <li><a href="{{ route('app.testimonials.get') }}" class="waves-effect"><i class="mdi mdi-book-multiple"></i><span> Testimonial</span></a></li>
   <li><a href="{{ route('app.faqs.index') }}" class="waves-effect"><i class="mdi mdi-comment-question-outline"></i><span> FAQ</span></a></li>
 </ul>
