--- a/resources/views/templates/index.edge
+++ b/resources/views/templates/index.edge
@@ -37,7 +37,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-	 <link rel="icon" href="favicon32.html" type="image/gif" sizes="32x32"> 
+	 <link rel="icon" href="/assets/images/favicon.ico?hello=1" type="image/gif" sizes="32x32"> 
 	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/icons/favicon152.png">
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icons/favicon144.png">
 <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/icons/favicon120.png">
