--- a/resources/views/templates/main.edge
+++ b/resources/views/templates/main.edge
@@ -11,7 +11,7 @@
   </title>
   <meta content="Admin Dashboard" name="description">
   <meta content="Themesbrand" name="author">
-  <link rel="shortcut icon" href="/assets/images/favicon.ico">
+  <link rel="shortcut icon" href="/assets/images/favicon.ico?hello=1">
   <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/metismenu.min.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/icons.css" rel="stylesheet" type="text/css">
