--- a/resources/views/includes/admin_navigation.edge
+++ b/resources/views/includes/admin_navigation.edge
@@ -3,14 +3,22 @@
     <li><a href="{{ route('admin.plans.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Plans</span></a></li>
     <li><a href="{{ route('admin.packages.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Packages</span></a></li>
     <li><a href="{{ route('admin.deposits.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Deposits</span></a></li>
-    <li><a href="{{ route('admin.supports.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Support </span></a></li>
+    <li><a href="{{ route('admin.supports.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Support 
+      @if(supportCount && supportCount > 0)
+      <span class="badge badge-primary badge-pill float-right"> {{ supportCount }}</span>
+      @endif
+    </span></a></li>
     <li><a href="{{ route('admin.announcements.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Announcements</span></a></li>
     <!-- <li><a href="{{ route('admin.dashboard') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Messages</span></a></li> -->
     <li><a href="{{ route('admin.transactions.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Transactions</span></a></li>
     <li><a href="{{ route('admin.faqs.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> FAQs</span></a></li>
     <li><a href="{{ route('admin.testimonials.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Testimonials</span></a></li>
     <li><a href="{{ route('admin.users.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Users</span></a></li>
-    <li><a href="{{ route('admin.withdrawals.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Withdrawals</span></a></li>
+    <li><a href="{{ route('admin.withdrawals.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Withdrawals
+      @if(withdrawalsCount && withdrawalsCount > 0)
+      <span class="badge badge-primary badge-pill float-right"> {{ withdrawalsCount }}</span>
+      @endif
+    </span></a></li>
     <li><a href="{{ route('admin.references.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> References</span></a></li>
     <li><a href="{{ route('admin.banks.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Banks</span></a></li>
     <li><a href="{{ route('admin.bankoptions.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Bank Options</span></a></li>
