Added more fueld sto the iser

--- a/resources/views/auth/signup.edge
+++ b/resources/views/auth/signup.edge
@@ -1,107 +1,211 @@
 @layout('templates.auth')
 @section('title')
-  Sign Up
+Sign Up
 @endsection
 @section('content')
 
 @include('includes.alert')
 
-<form action="{{ route('app.signup') }}" method="POST">
- {{ csrfField() }}
+<form action="{{ route('app.signup') }}" method="POST" enctype="multipart/form-data">
+  {{ csrfField() }}
+  <div class="row">
 
- <div class="form-group">
-  <label class="label">Username</label>
-  <div class="input-group">
-    <input type="text" class="form-control" name="username" placeholder="Username" value="{{ old('username','') }}">
-    <div class="input-group-append">
-      <span class="input-group-text">
-        <i class="mdi mdi-check-circle-outline"></i>
-      </span>
-    </div>
-  </div>
-  {{ elIf('<span>$self</span>', getErrorFor('username'), hasErrorFor('username')) }}
-</div>
-
-
- <div class="form-group">
-    <label class="label">Last Name</label>
-    <div class="input-group">
-      <input type="text" class="form-control" name="last_name" placeholder="Last Name" value="{{ old('last_name', '') }}">
-      <div class="input-group-append">
-        <span class="input-group-text">
-          <i class="fa fa-check-circle-outline"></i>
-        </span>
+    <div class="form-group col-sm-12">
+      <label class="label">Username</label>
+      <div class="input-group">
+        <input type="text" class="form-control" name="username" placeholder="Username" value="{{ old('username','') }}">
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="mdi mdi-check-circle-outline"></i>
+          </span>
+        </div>
       </div>
+      {{ elIf('<span>$self</span>', getErrorFor('username'), hasErrorFor('username')) }}
     </div>
-    {{ elIf('<span>$self</span>', getErrorFor('last_name'), hasErrorFor('last_name')) }}
-  </div>
 
-  <div class="form-group">
-    <label class="label">First Name</label>
-    <div class="input-group">
-      <input type="first_name" class="form-control" name="first_name" placeholder="First Name" value="{{ old('first_name') || '' }}">
-      <div class="input-group-append">
-        <span class="input-group-text">
-          <i class="mdi mdi-check-circle-outline"></i>
-        </span>
+
+    <div class="form-group col-sm-6">
+      <label class="label">Last Name</label>
+      <div class="input-group">
+        <input type="text" class="form-control" name="last_name" placeholder="Last Name" value="{{ old('last_name', '') }}">
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="fa fa-check-circle-outline"></i>
+          </span>
+        </div>
       </div>
+      {{ elIf('<span>$self</span>', getErrorFor('last_name'), hasErrorFor('last_name')) }}
     </div>
-    {{ elIf('<span>$self</span>', getErrorFor('first_name'), hasErrorFor('first_name')) }}
-  </div>
 
- <div class="form-group">
-   <label class="label">Email</label>
-   <div class="input-group">
-     <input type="email" class="form-control" name="email" placeholder="Email" value="{{ old('email') || ''}}">
-     <div class="input-group-append">
-       <span class="input-group-text">
-         <i class="mdi mdi-check-circle-outline"></i>
-       </span>
-     </div>
-   </div>
-   {{ elIf('<span>$self</span>', getErrorFor('email'), hasErrorFor('email')) }}
- </div>
-
-
- <div class="form-group">
-  <label class="label">Phone Number</label>
-  <div class="input-group">
-    <input type="text" class="form-control" name="phone_number" placeholder="Phone Number" value="{{ old('phone_number') || '' }}">
-    <div class="input-group-append">
-      <span class="input-group-text">
-        <i class="mdi mdi-check-circle-outline"></i>
-      </span>
+    <div class="form-group col-sm-6">
+      <label class="label">First Name</label>
+      <div class="input-group">
+        <input type="first_name" class="form-control" name="first_name" placeholder="First Name" value="{{ old('first_name') || '' }}">
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="mdi mdi-check-circle-outline"></i>
+          </span>
+        </div>
+      </div>
+      {{ elIf('<span>$self</span>', getErrorFor('first_name'), hasErrorFor('first_name')) }}
     </div>
+
+    <div class="form-group col-sm-6">
+      <label class="label">Email</label>
+      <div class="input-group">
+        <input type="email" class="form-control" name="email" placeholder="Email" value="{{ old('email') || ''}}">
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="mdi mdi-check-circle-outline"></i>
+          </span>
+        </div>
+      </div>
+      {{ elIf('<span>$self</span>', getErrorFor('email'), hasErrorFor('email')) }}
+    </div>
+
+
+    <div class="form-group col-sm-6">
+      <label class="label">Phone Number</label>
+      <div class="input-group">
+        <input type="text" class="form-control" name="phone_number" placeholder="Phone Number" value="{{ old('phone_number') || '' }}">
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="mdi mdi-check-circle-outline"></i>
+          </span>
+        </div>
+      </div>
+      {{ elIf('<span>$self</span>', getErrorFor('phone_number'), hasErrorFor('phone_number')) }}
+    </div>
+
+    <div class="form-group col-sm-12">
+      <label class="label">Address</label>
+      <div class="input-group">
+        <input type="text" class="form-control" name="address" placeholder="Address" value="{{ old('address') || '' }}">
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="mdi mdi-check-circle-outline"></i>
+          </span>
+        </div>
+      </div>
+      {{ elIf('<span>$self</span>', getErrorFor('address'), hasErrorFor('address')) }}
+    </div>
+
+    <div class="form-group col-sm-6">
+      <label class="label">City</label>
+      <div class="input-group">
+        <input type="text" class="form-control" name="city" placeholder="City" value="{{ old('city') || '' }}">
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="mdi mdi-check-circle-outline"></i>
+          </span>
+        </div>
+      </div>
+      {{ elIf('<span>$self</span>', getErrorFor('city'), hasErrorFor('city')) }}
+    </div>
+
+    <div class="form-group col-sm-6">
+      <label class="label">State</label>
+      <div class="input-group">
+        <input type="text" class="form-control" name="state" placeholder="State" value="{{ old('state') || '' }}">
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="mdi mdi-check-circle-outline"></i>
+          </span>
+        </div>
+      </div>
+      {{ elIf('<span>$self</span>', getErrorFor('state'), hasErrorFor('state')) }}
+    </div>
+
+    <div class="form-group col-sm-12">
+      <label class="label">Account Name</label>
+      <div class="input-group">
+        <input type="text" class="form-control" name="account_name" placeholder="Account Name" value="{{ old('account_name') || '' }}">
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="mdi mdi-check-circle-outline"></i>
+          </span>
+        </div>
+      </div>
+      {{ elIf('<span>$self</span>', getErrorFor('account_name'), hasErrorFor('account_name')) }}
+    </div>
+
+    <div class="form-group col-sm-6">
+      <label class="label">Account Number</label>
+      <div class="input-group">
+        <input type="text" class="form-control" name="account_number" placeholder="Account Number" value="{{ old('account_number') || '' }}">
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="mdi mdi-check-circle-outline"></i>
+          </span>
+        </div>
+      </div>
+      {{ elIf('<span>$self</span>', getErrorFor('account_number'), hasErrorFor('account_number')) }}
+    </div>
+
+    <div class="form-group col-sm-6">
+      <label class="label">Bank Name</label>
+      <div class="input-group">
+        <input type="text" class="form-control" name="bank_name" placeholder="Bank Name" value="{{ old('bank_name') || '' }}">
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="mdi mdi-check-circle-outline"></i>
+          </span>
+        </div>
+      </div>
+      {{ elIf('<span>$self</span>', getErrorFor('bank_name'), hasErrorFor('bank_name')) }}
+    </div>
+
+    <div class="form-group col-sm-6">
+      <label class="label">Your Picture</label>
+      <div class="input-group">
+        <input type="file" class="form-control" name="picture" placeholder="Your Picture">
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="mdi mdi-check-circle-outline"></i>
+          </span>
+        </div>
+      </div>
+      {{ elIf('<span>$self</span>', getErrorFor('picture'), hasErrorFor('picture')) }}
+    </div>
+    <div class="form-group col-sm-6">
+      <label class="label">ID Card</label>
+      <div class="input-group">
+        <input type="file" class="form-control" name="id_card" placeholder="ID Card">
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="mdi mdi-check-circle-outline"></i>
+          </span>
+        </div>
+      </div>
+      {{ elIf('<span>$self</span>', getErrorFor('id_card'), hasErrorFor('id_card')) }}
+    </div>
+
+    <div class="form-group col-sm-12">
+      <label class="label">Password</label>
+      <div class="input-group">
+        <input type="password" class="form-control" name="password">
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="mdi mdi-check-circle-outline"></i>
+          </span>
+        </div>
+      </div>
+      {{ elIf('<span>$self</span>', getErrorFor('password'), hasErrorFor('password')) }}
+    </div>
+
+    <div class="form-group col-sm-12">
+      <input type="checkbox" name="terms" required> Accept <a href="{{ route('guest.terms') }}">Terms and Conditions
+      </a>
+    </div>
+
+    <div class="form-group col-sm-12">
+      <button class="btn btn-primary submit-btn btn-block">Sign Up</button>
+    </div>
+
+    <div class="text-block text-center my-3 col-sm-12">
+      <a href="{{ route('app.signin') }}" class="text-black text-small">Already have an account? Sign In</a>
+    </div>
+
   </div>
-  {{ elIf('<span>$self</span>', getErrorFor('phone_number'), hasErrorFor('phone_number')) }}
-</div>
-
- 
- <div class="form-group">
-   <label class="label">Password</label>
-   <div class="input-group">
-     <input type="password" class="form-control" name="password" >
-     <div class="input-group-append">
-       <span class="input-group-text">
-         <i class="mdi mdi-check-circle-outline"></i>
-       </span>
-     </div>
-   </div>
-   {{ elIf('<span>$self</span>', getErrorFor('password'), hasErrorFor('password')) }}
- </div>
-
- <div class="form-group">
-    <input type="checkbox" name="terms" required> Accept <a href="{{ route('guest.terms') }}">Terms and Conditions </a>
-</div>
-
- <div class="form-group">
-   <button class="btn btn-primary submit-btn btn-block">Sign Up</button>
- </div>
-
- <div class="text-block text-center my-3">
-   <a href="{{ route('app.signin') }}" class="text-black text-small">Already have an account? Sign In</a>
- </div>
-
-
 </form>
 @endsection
