Show all user details in admin

--- a/resources/views/crud/show.edge
+++ b/resources/views/crud/show.edge
@@ -52,7 +52,7 @@
               N/A
               @endif
               @elseif(showAble.type == 'image')
-              <img src="{{ lodash(resourceDatum, showAble.value) }}" class="img-responsive" />
+              <img src="/{{ lodash(resourceDatum, showAble.value) }}" class="img-responsive" />
               @else
               {{ lodash(resourceDatum, showAble.value) }}
               @endif
