--- a/resources/views/admin/users/show.edge
+++ b/resources/views/admin/users/show.edge
@@ -47,7 +47,7 @@
               N/A
               @endif
               @elseif(showAble.type == 'image')
-              <img src="{{ lodash(resourceDatum, showAble.value) }}" class="img-responsive" />
+              <img src="/{{ lodash(resourceDatum, showAble.value) }}" class="img-responsive" />
               @else
               {{ lodash(resourceDatum, showAble.value) }}
               @endif
