--- a/resources/views/templates/index.edge
+++ b/resources/views/templates/index.edge
@@ -29,7 +29,8 @@
 	<link href="/assets/css/magnific-popup.css" rel="stylesheet">
 	<!-- Slick nav css -->
 	<link rel="stylesheet" href="/assets/css/slicknav.css">
-	<!-- Main custom css -->
+    <!-- Main custom css -->
+    <link href="/assets/css/whatsapp.css" rel="stylesheet" type="text/css">
 	<link href="/assets/css/index.css" rel="stylesheet" media="screen">
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -125,6 +126,8 @@
         </footer>
         <!-- Footer Section ends -->
     <!--Start of Tawk.to Script-->
+    @include('includes.whatsapp')
+
     <script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
