--- a/resources/views/templates/index.edge
+++ b/resources/views/templates/index.edge
@@ -7,9 +7,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Evonance | Trusted Trading Professionals">
-    <meta name="keywords" content="Evonance">
-    <meta name="author" content="Evolution Finance">
+	<meta name="description" content="DigitalCoop Finance Limited - Invest And Earn">
+    <meta name="keywords" content="DigitalCoop Finance Invest Earn">
+    <meta name="author" content="DigitalCoop">
 	<!-- Page Title -->
 	<title>
         @!section('title')
