--- a/resources/views/includes/app_navigation.edge
+++ b/resources/views/includes/app_navigation.edge
@@ -13,4 +13,5 @@
   <li><a href="{{ route('app.supports.index') }}" class="waves-effect"><i class="mdi mdi-help"></i><span> Support</span></a></li>
   <li><a href="{{ route('app.testimonials.get') }}" class="waves-effect"><i class="mdi mdi-book-multiple"></i><span> Testimonial</span></a></li>
   <li><a href="{{ route('app.faqs.index') }}" class="waves-effect"><i class="mdi mdi-comment-question-outline"></i><span> FAQ</span></a></li>
+  <li><a href="{{ route('app.referrals.index') }}" class="waves-effect"><i class="mdi mdi-directions"></i><span> Referrals</span></a></li>
 </ul>
